--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 
-
-# Created by https://www.toptal.com/developers/gitignore/api/netbeans,java,maven
-# Edit at https://www.toptal.com/developers/gitignore?templates=netbeans,java,maven
+# Created by https://www.toptal.com/developers/gitignore/api/java,netbeans
+# Edit at https://www.toptal.com/developers/gitignore?templates=java,netbeans
 
 ### Java ###
 # Compiled class file
@@ -28,26 +27,6 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-### Maven ###
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
-
-### Maven Patch ###
-# Eclipse m2e generated files
-# Eclipse Core
-.project
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
-
 ### NetBeans ###
 **/nbproject/private/
 **/nbproject/Makefile-*.mk
@@ -58,11 +37,4 @@ dist/
 nbdist/
 .nb-gradle/
 
-### Env ###
-.env
-
-
-.idea
-
-
-# End of https://www.toptal.com/developers/gitignore/api/netbeans,java,maven
+# End of https://www.toptal.com/developers/gitignore/api/java,netbeans
