--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,8 +36,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/sitori
 endorsed.classpath=
 excludes=
+file.reference.commons-collections4-4.4.jar=lib\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.19.jar=lib\\commons-compress-1.19.jar
 file.reference.dotenv-java-2.2.2.jar=lib\\dotenv-java-2.2.2.jar
+file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.27.jar=lib\\mysql-connector-java-8.0.27.jar
+file.reference.poi-4.1.1.jar=lib\\poi-4.1.1.jar
+file.reference.poi-ooxml-4.1.1.jar=lib\\poi-ooxml-4.1.1.jar
+file.reference.poi-ooxml-schemas-4.1.1.jar=lib\\poi-ooxml-schemas-4.1.1.jar
+file.reference.xmlbeans-3.1.0.jar=lib\\xmlbeans-3.1.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
@@ -45,7 +52,14 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.27.jar}:\
     ${file.reference.dotenv-java-2.2.2.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.19.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.poi-4.1.1.jar}:\
+    ${file.reference.poi-ooxml-4.1.1.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.1.1.jar}:\
+    ${file.reference.xmlbeans-3.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
