--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,45 +37,15 @@ dist.jlink.output=${dist.jlink.dir}/sitori
 endorsed.classpath=
 excludes=
 file.reference.activation-1.1.1.jar=lib\\activation-1.1.1.jar
-file.reference.commons-codec-1.13.jar=lib\\commons-codec-1.13.jar
-file.reference.commons-codec-1.15.jar=lib\\commons-codec-1.15.jar
 file.reference.commons-collections4-4.4.jar=lib\\commons-collections4-4.4.jar
 file.reference.commons-compress-1.19.jar=lib\\commons-compress-1.19.jar
-file.reference.commons-compress-1.21.jar=lib\\commons-compress-1.21.jar
-file.reference.commons-fileupload-1.3.1.jar=lib\\commons-fileupload-1.3.1.jar
-file.reference.commons-io-2.11.0.jar=lib\\commons-io-2.11.0.jar
-file.reference.commons-logging-1.2.jar=lib\\commons-logging-1.2.jar
-file.reference.commons-math3-3.6.1.jar=lib\\commons-math3-3.6.1.jar
-file.reference.curvesapi-1.06.jar=lib\\curvesapi-1.06.jar
 file.reference.dotenv-java-2.2.2.jar=lib\\dotenv-java-2.2.2.jar
-file.reference.jaxb-api-2.3.1.jar=lib\\jaxb-api-2.3.1.jar
-file.reference.jaxb-core-2.3.0.1.jar=lib\\jaxb-core-2.3.0.1.jar
-file.reference.jaxb-impl-2.3.2.jar=lib\\jaxb-impl-2.3.2.jar
 file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
-file.reference.junit-4.12.jar=lib\\junit-4.12.jar
-file.reference.log4j-1.2.17.jar=lib\\log4j-1.2.17.jar
-file.reference.log4j-api-2.14.1.jar=lib\\log4j-api-2.14.1.jar
-file.reference.log4j-core-2.17.0.jar=lib\\log4j-core-2.17.0.jar
 file.reference.mysql-connector-java-8.0.27.jar=lib\\mysql-connector-java-8.0.27.jar
-file.reference.poi-3.17.jar=lib\\poi-3.17.jar
 file.reference.poi-4.1.1.jar=lib\\poi-4.1.1.jar
-file.reference.poi-5.1.0.jar=lib\\poi-5.1.0.jar
-file.reference.poi-examples-4.1.1.jar=lib\\poi-examples-4.1.1.jar
-file.reference.poi-examples-5.1.0.jar=lib\\poi-examples-5.1.0.jar
-file.reference.poi-excelant-4.1.1.jar=lib\\poi-excelant-4.1.1.jar
-file.reference.poi-excelant-5.1.0.jar=lib\\poi-excelant-5.1.0.jar
-file.reference.poi-javadoc-5.1.0.jar=lib\\poi-javadoc-5.1.0.jar
 file.reference.poi-ooxml-4.1.1.jar=lib\\poi-ooxml-4.1.1.jar
-file.reference.poi-ooxml-5.1.0.jar=lib\\poi-ooxml-5.1.0.jar
-file.reference.poi-ooxml-full-5.1.0.jar=lib\\poi-ooxml-full-5.1.0.jar
-file.reference.poi-ooxml-lite-5.1.0.jar=lib\\poi-ooxml-lite-5.1.0.jar
 file.reference.poi-ooxml-schemas-4.1.1.jar=lib\\poi-ooxml-schemas-4.1.1.jar
-file.reference.poi-scratchpad-4.1.1.jar=lib\\poi-scratchpad-4.1.1.jar
-file.reference.poi-scratchpad-5.1.0.jar=lib\\poi-scratchpad-5.1.0.jar
-file.reference.slf4j-api-1.7.32.jar=lib\\slf4j-api-1.7.32.jar
-file.reference.SparseBitSet-1.2.jar=lib\\SparseBitSet-1.2.jar
 file.reference.xmlbeans-3.1.0.jar=lib\\xmlbeans-3.1.0.jar
-file.reference.xmlbeans-5.0.2.jar=lib\\xmlbeans-5.0.2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
@@ -85,43 +55,12 @@ javac.classpath=\
     ${file.reference.dotenv-java-2.2.2.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.poi-5.1.0.jar}:\
-    ${file.reference.poi-ooxml-5.1.0.jar}:\
-    ${file.reference.commons-compress-1.21.jar}:\
-    ${file.reference.xmlbeans-5.0.2.jar}:\
     ${file.reference.commons-collections4-4.4.jar}:\
-    ${file.reference.commons-math3-3.6.1.jar}:\
-    ${file.reference.poi-ooxml-full-5.1.0.jar}:\
-    ${file.reference.log4j-api-2.14.1.jar}:\
-    ${file.reference.log4j-core-2.17.0.jar}:\
-    ${file.reference.commons-fileupload-1.3.1.jar}:\
-    ${file.reference.commons-logging-1.2.jar}:\
-    ${file.reference.commons-io-2.11.0.jar}:\
-    ${file.reference.commons-codec-1.15.jar}:\
-    ${file.reference.SparseBitSet-1.2.jar}:\
-    ${file.reference.poi-examples-5.1.0.jar}:\
-    ${file.reference.poi-excelant-5.1.0.jar}:\
-    ${file.reference.poi-javadoc-5.1.0.jar}:\
-    ${file.reference.poi-ooxml-lite-5.1.0.jar}:\
-    ${file.reference.poi-scratchpad-5.1.0.jar}:\
-    ${file.reference.poi-3.17.jar}:\
-    ${file.reference.curvesapi-1.06.jar}:\
-    ${file.reference.slf4j-api-1.7.32.jar}:\
-    ${file.reference.activation-1.1.1.jar}:\
-    ${file.reference.commons-codec-1.13.jar}:\
-    ${file.reference.commons-compress-1.19.jar}:\
-    ${file.reference.jaxb-api-2.3.1.jar}:\
-    ${file.reference.jaxb-core-2.3.0.1.jar}:\
-    ${file.reference.jaxb-impl-2.3.2.jar}:\
-    ${file.reference.junit-4.12.jar}:\
-    ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.poi-4.1.1.jar}:\
-    ${file.reference.poi-examples-4.1.1.jar}:\
-    ${file.reference.poi-excelant-4.1.1.jar}:\
     ${file.reference.poi-ooxml-4.1.1.jar}:\
     ${file.reference.poi-ooxml-schemas-4.1.1.jar}:\
-    ${file.reference.poi-scratchpad-4.1.1.jar}:\
-    ${file.reference.xmlbeans-3.1.0.jar}
+    ${file.reference.xmlbeans-3.1.0.jar}:\
+    ${file.reference.commons-compress-1.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
